_chars-depl_deprecated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chars-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chars-postgres
  template:
    metadata:
      labels:
        app: chars-postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:13
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: chars-db
      volumes:
        - name: chars-db
          persistentVolumeClaim:
            claimName: chars-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: chars-postgres-srv
spec:
  selector:
    app: chars-postgres
  ports:
    - port: 5432
      name: chars-postgres-port
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: chars-srv
spec:
  selector:
    app: chars
  ports:
    - port: 3000
      targetPort: 80
      protocol: TCP
      name: chars-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chars-depl
spec:
  selector:
    matchLabels:
      app: chars
  template:
    metadata:
      labels:
        app: chars
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nginx
          image: nginx:1.19-alpine
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-conf-volume
              mountPath: /etc/nginx/templates
              
        - name: chars
          image: at1anta/chars-service
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /var/www/html
              name: shared-files
            - name: chars-conf-volume
              mountPath: /usr/local/etc/php/conf.d/php.ini
              subPath: chars.config

      volumes:
        - name: nginx-conf-volume
          hostPath:
            path: /home/r22/services/ms_chars/.docker/conf/nginx/templates

        - name: chars-conf-volume
          configMap:
            name: chars-config

        - name: shared-files
          hostPath:
            path: /home/r22/services/ms_chars
