chars2-depl.yaml
# описание сервиса, точки доступа к набору подов
apiVersion: v1
kind: Service
metadata:
  name: chars2-srv
spec:
  selector:
    app: chars2
  ports:
    - port: 8115
      protocol: TCP
      targetPort: 80
---
# описание сервиса для базы данных (возможно понадобиться масштабирование)
apiVersion: v1
kind: Service
metadata:
  name: chars2-postgres-srv
spec:
  selector:
    app: chars2-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
# Описание deployment конфигурации для базы данных
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chars2-postgres-depl
spec:
  selector:
    matchLabels:
      app: chars2-postgres
  #  replicas: 2
  #  minReadySeconds: 15 # секунды работы, по прошествию которых пода считается доступной
  #  strategy:
  #    type: RollingUpdate # нулевое время простоя системы при обновлении.
  #    rollingUpdate:
  #      maxUnavailable: 1 # задаёт максимальное число недоступных подов (у нас две реплики - поэтому простой сведен к нулю)
  #      maxSurge: 1 # при переходе на новую версию программы, мы можем добавить в кластер ещё один под, что приведёт к тому, что у нас могут быть одновременно запущены до (replicas + 1) подов
  template:
    metadata:
      labels:
        app: chars2-postgres
    spec:
      containers:
        - image: postgres:13
          imagePullPolicy: IfNotPresent # не будет дрочить когда не нужно
          name: postgres-container
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: chars2-database-data
      volumes:
        - name: chars2-database-data
          persistentVolumeClaim:
            claimName: chars2-db-pvc
---
# Описание deployment конфигурации приложения
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chars2-app-deployment
spec:
  selector:
    matchLabels:
      app: chars2
  template:
    metadata:
      labels:
        app: chars2
    spec: # pod spec
      # see https://anatlanta.atlassian.net/browse/WEB-2243
      imagePullSecrets:
        - name: regcred
      volumes:
        # диреткория для assets которую генерирует php
        - name: shared-files
          emptyDir: { }
        - name: nginx-config
          configMap:
            name: nginx-configmap
      containers:
        - name: chars2-php
          image: at1anta/chars2-service:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html && chmod -R 777 /var/www/html/var"]
        # restart nginx `nginx -s reload -c /etc/nginx/nginx.conf`
        - name: chars2-nginx
          image: nginx:1.19-alpine
          ports:
            - containerPort: 8115
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
