ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
     - host: vector.atlanta.ua
       http:
        paths:
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: file-storage-srv
                port:
                  number: 80
                  
          - path: /api/v1/rbac
            pathType: Prefix
            backend:
              service:
                name: rbac-srv
                port:
                  number: 8100

          - path: /chars/api/v1
            pathType: Prefix
            backend:
              service:
                name: chars-srv
                port:
                  number: 3000
                  
          - path: /api/v1/tests
            pathType: Prefix
            backend:
              service:
                name: test-srv
                port:
                  number: 3000          

          - path: /api/v1/print
            pathType: Prefix
            backend:
              service:
                name: print-srv
                port:
                  number: 8101
                  
          - path: /api/v1/call_tracking
            pathType: Prefix
            backend:
              service: 
                name: call-tracking-srv
                port:
                  number: 3000
                  
          - path: /api/v1/candidates
            pathType: Prefix
            backend:
              service:
                name: candidates-srv
                port:
                  number: 3000          
                  
          - path: /api/v1/handling
            pathType: Prefix
            backend:
              service:
                name: handlings-srv
                port:
                  number: 3000
                  
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000          

          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-srv
                port:
                  number: 80
